--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHYNOTE</title>
+    <link rel="icon" href="/static/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -83,13 +84,17 @@
             class="bg-slate-50 border-r border-slate-200 flex flex-col flex-shrink-0 transition-all duration-300">
             <!-- Header -->
             <div class="p-4 border-b border-slate-200 flex justify-between items-center bg-slate-50 flex-shrink-0">
-                <div class="relative">
-                    <h1 class="text-xl font-bold text-slate-700 tracking-wider inline-block">
-                        <a :href="homeUrl">SHYNOTE</a>
-                    </h1>
-                    <span v-if="appVersion"
-                        class="absolute -top-1 -right-8 text-[9px] font-normal text-slate-400 dark:text-slate-500 select-none">v{{
-                        appVersion }}</span>
+                <div class="flex items-center gap-3">
+                    <img src="/static/logo.png" class="w-12 h-12 rounded-full shadow-sm object-cover"
+                        alt="SHYNOTE Logo">
+                    <div class="relative">
+                        <h1 class="text-xl font-bold text-slate-700 tracking-wider inline-block">
+                            <a :href="homeUrl">SHYNOTE</a>
+                        </h1>
+                        <span v-if="appVersion"
+                            class="absolute -top-1 -right-8 text-[9px] font-normal text-slate-400 dark:text-slate-500 select-none">v{{
+                            appVersion }}</span>
+                    </div>
                 </div>
                 <button @click="toggleDarkMode"
                     class="p-1 text-slate-400 hover:text-slate-600 hover:bg-slate-200 rounded-full transition-colors"
@@ -110,8 +115,8 @@
                         class="p-1.5 hover:bg-slate-200 rounded text-slate-500 hover:text-slate-700 transition-colors flex items-center gap-1"
                         title="Sort Options">
                         <span class="material-symbols-rounded text-[18px] block">sort</span>
-                        <span class="text-xs font-medium"><span class="text-slate-400 dark:text-slate-500">Sort</span>
-                            ({{ sortLabel }})</span>
+                        <span class="text-xs font-medium"><span class="text-slate-400 dark:text-slate-500">SORT</span>
+                            <span class="ml-1 text-slate-600 dark:text-slate-400">{{ sortLabel }}</span></span>
                     </button>
 
                     <!-- Sort Menu Overlay (Close on click outside) -->
@@ -119,41 +124,41 @@
 
                     <!-- Sort Menu -->
                     <div v-if="showSortMenu"
-                        class="absolute left-0 top-full mt-1 w-48 bg-white dark:bg-slate-800 rounded-lg shadow-xl border border-slate-200 dark:border-slate-700 z-[100] p-1">
-                        <div class="text-[10px] uppercase font-bold text-slate-400 dark:text-slate-500 px-2 py-1">
+                        class="absolute left-0 top-full mt-1 w-40 bg-white dark:bg-[#3B4252] rounded shadow-xl border border-slate-200 dark:border-[#4C566A] z-[100] p-1">
+                        <div class="text-[9px] uppercase font-bold text-slate-400 dark:text-slate-500 px-2 py-1">
                             Sort By</div>
                         <button @click="setSortOption('field', 'title'); closeSortMenu()"
-                            :class="sortOption.field === 'title' ? 'text-blue-600 dark:text-blue-400 bg-blue-50 dark:bg-slate-700' : 'text-slate-600 dark:text-slate-300'"
-                            class="w-full text-left px-2 py-1.5 rounded text-sm hover:bg-slate-100 dark:hover:bg-slate-700 flex justify-between items-center">
+                            :class="sortOption.field === 'title' ? 'text-blue-600 dark:text-[#88C0D0] bg-blue-50 dark:bg-[#434C5E]' : 'text-slate-600 dark:text-[#D8DEE9]'"
+                            class="w-full text-left px-2 py-1 rounded text-xs hover:bg-slate-100 dark:hover:bg-[#434C5E] flex justify-between items-center transition-colors">
                             Title <span v-if="sortOption.field === 'title'"
-                                class="material-symbols-rounded text-[16px]">check</span>
+                                class="material-symbols-rounded text-[14px]">check</span>
                         </button>
                         <button @click="setSortOption('field', 'updated_at'); closeSortMenu()"
-                            :class="sortOption.field === 'updated_at' ? 'text-blue-600 dark:text-blue-400 bg-blue-50 dark:bg-slate-700' : 'text-slate-600 dark:text-slate-300'"
-                            class="w-full text-left px-2 py-1.5 rounded text-sm hover:bg-slate-100 dark:hover:bg-slate-700 flex justify-between items-center">
+                            :class="sortOption.field === 'updated_at' ? 'text-blue-600 dark:text-[#88C0D0] bg-blue-50 dark:bg-[#434C5E]' : 'text-slate-600 dark:text-[#D8DEE9]'"
+                            class="w-full text-left px-2 py-1 rounded text-xs hover:bg-slate-100 dark:hover:bg-[#434C5E] flex justify-between items-center transition-colors">
                             Date Modified <span v-if="sortOption.field === 'updated_at'"
-                                class="material-symbols-rounded text-[16px]">check</span>
+                                class="material-symbols-rounded text-[14px]">check</span>
                         </button>
                         <button @click="setSortOption('field', 'created_at'); closeSortMenu()"
-                            :class="sortOption.field === 'created_at' ? 'text-blue-600 dark:text-blue-400 bg-blue-50 dark:bg-slate-700' : 'text-slate-600 dark:text-slate-300'"
-                            class="w-full text-left px-2 py-1.5 rounded text-sm hover:bg-slate-100 dark:hover:bg-slate-700 flex justify-between items-center">
+                            :class="sortOption.field === 'created_at' ? 'text-blue-600 dark:text-[#88C0D0] bg-blue-50 dark:bg-[#434C5E]' : 'text-slate-600 dark:text-[#D8DEE9]'"
+                            class="w-full text-left px-2 py-1 rounded text-xs hover:bg-slate-100 dark:hover:bg-[#434C5E] flex justify-between items-center transition-colors">
                             Date Created <span v-if="sortOption.field === 'created_at'"
-                                class="material-symbols-rounded text-[16px]">check</span>
+                                class="material-symbols-rounded text-[14px]">check</span>
                         </button>
-                        <div class="h-[1px] bg-slate-100 dark:bg-slate-700 my-1"></div>
-                        <div class="text-[10px] uppercase font-bold text-slate-400 dark:text-slate-500 px-2 py-1">
+                        <div class="h-[1px] bg-slate-100 dark:bg-[#4C566A] my-1"></div>
+                        <div class="text-[9px] uppercase font-bold text-slate-400 dark:text-slate-500 px-2 py-1">
                             Order</div>
                         <button @click="setSortOption('direction', 'asc'); closeSortMenu()"
-                            :class="sortOption.direction === 'asc' ? 'text-blue-600 dark:text-blue-400 bg-blue-50 dark:bg-slate-700' : 'text-slate-600 dark:text-slate-300'"
-                            class="w-full text-left px-2 py-1.5 rounded text-sm hover:bg-slate-100 dark:hover:bg-slate-700 flex justify-between items-center">
+                            :class="sortOption.direction === 'asc' ? 'text-blue-600 dark:text-[#88C0D0] bg-blue-50 dark:bg-[#434C5E]' : 'text-slate-600 dark:text-[#D8DEE9]'"
+                            class="w-full text-left px-2 py-1 rounded text-xs hover:bg-slate-100 dark:hover:bg-[#434C5E] flex justify-between items-center transition-colors">
                             Ascending <span v-if="sortOption.direction === 'asc'"
-                                class="material-symbols-rounded text-[16px]">north</span>
+                                class="material-symbols-rounded text-[14px]">north</span>
                         </button>
                         <button @click="setSortOption('direction', 'desc'); closeSortMenu()"
-                            :class="sortOption.direction === 'desc' ? 'text-blue-600 dark:text-blue-400 bg-blue-50 dark:bg-slate-700' : 'text-slate-600 dark:text-slate-300'"
-                            class="w-full text-left px-2 py-1.5 rounded text-sm hover:bg-slate-100 dark:hover:bg-slate-700 flex justify-between items-center">
+                            :class="sortOption.direction === 'desc' ? 'text-blue-600 dark:text-[#88C0D0] bg-blue-50 dark:bg-[#434C5E]' : 'text-slate-600 dark:text-[#D8DEE9]'"
+                            class="w-full text-left px-2 py-1 rounded text-xs hover:bg-slate-100 dark:hover:bg-[#434C5E] flex justify-between items-center transition-colors">
                             Descending <span v-if="sortOption.direction === 'desc'"
-                                class="material-symbols-rounded text-[16px]">south</span>
+                                class="material-symbols-rounded text-[14px]">south</span>
                         </button>
                     </div>
                 </div>
