--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHYNOTE</title>
     <link rel="icon" href="/static/favicon.ico">
+    <link rel="manifest" href="/static/manifest.json">
+    <link rel="apple-touch-icon" href="/static/icon-192.png">
+    <meta name="theme-color" content="#2E3440">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -323,6 +326,7 @@
                         <div class="items-baseline gap-3 flex-1 min-w-0"
                             :class="isSidebarOpen ? 'hidden md:flex' : 'flex'">
                             <input v-model="selectedNote.title" @input="debouncedUpdate"
+                                @keydown.tab.prevent="focusEditor"
                                 class="text-lg font-bold text-slate-800 dark:text-[#ECEFF4] outline-none bg-transparent placeholder-slate-300 dark:placeholder-[#434C5E] min-w-0 flex-1"
                                 placeholder="Note Title">
                             <span class="text-xs text-slate-400 dark:text-slate-500 whitespace-nowrap hidden sm:block">
@@ -462,6 +466,19 @@
             </div>
         </main>
     </div>
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/static/sw.js')
+                    .then(registration => {
+                        console.log('SW registered:', registration);
+                    })
+                    .catch(error => {
+                        console.log('SW registration failed:', error);
+                    });
+            });
+        }
+    </script>
     <script src="/static/app.js?v=6" type="module"></script>
 </body>
 
