--- a/static/index.html
+++ b/static/index.html
@@ -333,8 +333,7 @@
                         <button @click="toggleSidebar"
                             class="p-2 mr-2 text-slate-400 dark:text-[#D8DEE9] hover:text-slate-600 dark:hover:text-[#ECEFF4] hover:bg-slate-100 dark:hover:bg-[#4C566A] rounded-lg transition-colors flex-shrink-0"
                             title="Toggle Sidebar">
-                            <span class="material-symbols-rounded">{{ isSidebarOpen ? 'keyboard_double_arrow_left' :
-                                'keyboard_double_arrow_right' }}</span>
+                            <span class="material-symbols-rounded">menu</span>
                         </button>
                         <div class="items-baseline gap-3 flex-1 min-w-0"
                             :class="isSidebarOpen ? 'hidden md:flex' : 'flex'">
