--- a/static/index.html
+++ b/static/index.html
@@ -209,10 +209,10 @@
                     <div @dragover.prevent @drop="handleDrop(null)" class="min-h-[2rem] pb-2 transition-colors rounded"
                         :class="draggedNoteId ? 'bg-slate-50/50 border-2 border-dashed border-transparent hover:border-slate-300' : ''">
                         <!-- Uncategorized Notes (Root) -->
-                        <div v-for="note in sortedRootNotes" :key="note.id" @click="selectNote(note)" :class="selectedNote && selectedNote.id === note.id 
+                        <div v-for="note in sortedRootNotes" :key="note.id" @click="selectNote(note)"
+                            :class="selectedNote && selectedNote.id === note.id 
                             ? 'bg-blue-200 border-blue-400 shadow-md' 
-                            : 'bg-white shadow-md border-slate-200 hover:shadow-lg hover:bg-blue-50'" draggable="true"
-                            @dragstart="handleDragStart(note)"
+                            : 'bg-white shadow-md border-slate-200 md:hover:shadow-lg md:hover:bg-blue-50 active:bg-blue-50'" draggable="true" @dragstart="handleDragStart(note)"
                             class="text-sm h-10 p-2 mb-1 cursor-pointer border rounded-md flex items-center group justify-between transition-all">
                             <div class="flex items-center min-w-0 flex-1">
                                 <img src="/static/icons/markdown.svg" class="w-5 h-5 mr-2 flex-shrink-0" alt="Markdown">
@@ -233,7 +233,8 @@
                                         formatDate(note.updated_at) }}</div>
                                 </div>
                             </div>
-                            <div class="flex items-center opacity-0 group-hover:opacity-100 transition-opacity">
+                            <div
+                                class="flex items-center opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity">
                                 <button @click.stop="startRename(note, 'note')"
                                     class="text-slate-500 hover:text-blue-700 p-1" title="Rename Note">
                                     <span class="material-symbols-rounded text-[16px]">edit</span>
@@ -247,9 +248,10 @@
                     </div> <!-- End Root Drop Zone -->
 
                     <!-- Folders -->
-                    <div v-for="folder in sortedFolders" :key="folder.id" class="mb-2">
-                        <div @dragover.prevent @drop="handleDrop(folder.id)"
-                            class="flex items-center text-sm font-semibold h-10 text-slate-600 p-2 mb-1 group bg-white shadow-md border border-slate-200 hover:shadow-lg hover:bg-blue-50 rounded transition-all cursor-pointer">
+                    <div v-for="folder in sortedFolders" :key="folder.id" class="mb-2" @dragover.prevent
+                        @drop="handleDrop(folder.id)">
+                        <div
+                            class="flex items-center text-sm font-semibold h-10 text-slate-600 p-2 mb-1 group bg-white shadow-md border border-slate-200 md:hover:shadow-lg md:hover:bg-blue-50 active:bg-blue-50 rounded transition-all cursor-pointer">
                             <img :src="getSortedFolderNotes(folder.id).length > 0 ? '/static/icons/folder-open.svg' : '/static/icons/folder.svg'"
                                 class="w-5 h-5 mr-2 opacity-90" alt="Folder">
                             <!-- Rename Input -->
@@ -261,7 +263,8 @@
                             <span v-else @dblclick.stop="startRename(folder, 'folder')"
                                 class="truncate flex-1 select-none">{{ folder.name }}</span>
 
-                            <div class="ml-auto opacity-0 group-hover:opacity-100 flex items-center transition-opacity">
+                            <div
+                                class="ml-auto opacity-100 md:opacity-0 md:group-hover:opacity-100 flex items-center transition-opacity">
                                 <button @click.stop="startRename(folder, 'folder')"
                                     class="text-slate-500 hover:text-blue-700 mr-1" title="Rename Folder">
                                     <span class="material-symbols-rounded text-[18px]">edit</span>
@@ -278,9 +281,10 @@
                         </div>
                         <div class="pl-3 border-l-2 border-slate-200 ml-2">
                             <div v-for="note in getSortedFolderNotes(folder.id)" :key="note.id"
-                                @click="selectNote(note)" :class="selectedNote && selectedNote.id === note.id 
+                                @click="selectNote(note)"
+                                :class="selectedNote && selectedNote.id === note.id 
                                     ? 'bg-blue-200 border-blue-400 shadow-md' 
-                                    : 'bg-white shadow-md border-slate-200 hover:shadow-lg hover:bg-blue-50'"
+                                    : 'bg-white shadow-md border-slate-200 md:hover:shadow-lg md:hover:bg-blue-50 active:bg-blue-50'"
                                 draggable="true" @dragstart="handleDragStart(note)"
                                 class="text-sm h-10 p-2 mb-1 cursor-pointer border rounded-md flex items-center group justify-between transition-all relative">
                                 <!-- Tree Connector -->
@@ -304,7 +308,8 @@
                                             formatDate(note.updated_at) }}</div>
                                     </div>
                                 </div>
-                                <div class="flex items-center opacity-0 group-hover:opacity-100 transition-opacity">
+                                <div
+                                    class="flex items-center opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity">
                                     <button @click.stop="startRename(note, 'note')"
                                         class="text-slate-500 hover:text-blue-700 p-1" title="Rename Note">
                                         <span class="material-symbols-rounded text-[16px]">edit</span>
@@ -401,7 +406,7 @@
                         class="flex-1 flex flex-col border-r border-slate-100 dark:border-[#434C5E] relative group"
                         :class="isDarkMode ? 'dark' : ''">
                         <span
-                            class="absolute top-2 right-6 text-[10px] font-bold uppercase tracking-widest pointer-events-none z-10 select-none text-slate-400 dark:text-slate-500 bg-slate-100/50 dark:bg-[#3B4252]/50 px-2 py-1 rounded backdrop-blur-sm">Editor</span>
+                            class="absolute top-2 left-6 text-[10px] font-bold uppercase tracking-widest pointer-events-none z-10 select-none text-slate-400 dark:text-slate-500 bg-slate-100/50 dark:bg-[#3B4252]/50 px-2 py-1 rounded backdrop-blur-sm">Editor</span>
                         <textarea ref="editorRef" @scroll="handleScroll" v-model="selectedNote.content"
                             @keydown="handleEditorKeyDown" @input="debouncedUpdate" @mouseup="handleMouseUp"
                             :style="'font-size: ' + fontSize + 'px !important'"
@@ -459,10 +464,10 @@
                     <!-- Preview -->
                     <div v-show="viewMode !== 'edit'" class="flex-1 flex flex-col relative group overflow-hidden">
                         <span
-                            class="absolute top-2 right-6 text-[10px] font-bold uppercase tracking-widest pointer-events-none z-20 select-none text-slate-400 dark:text-slate-500 bg-slate-100/50 dark:bg-[#3B4252]/50 px-2 py-1 rounded backdrop-blur-sm">Preview</span>
+                            class="absolute top-2 left-6 text-[10px] font-bold uppercase tracking-widest pointer-events-none z-20 select-none text-slate-400 dark:text-slate-500 bg-slate-100/50 dark:bg-[#3B4252]/50 px-2 py-1 rounded backdrop-blur-sm">Preview</span>
                         <div ref="previewRef" @scroll="handleScroll" v-html="previewContent"
                             :style="'font-size: ' + fontSize + 'px !important'"
-                            class="markdown-body p-6 pt-12 overflow-y-auto h-full bg-white dark:bg-[#2E3440] transition-colors">
+                            class="markdown-body p-6 !pt-14 overflow-y-auto h-full bg-white dark:bg-[#2E3440] transition-colors">
                         </div>
                     </div>
                 </div>
