--- a/static/index.html
+++ b/static/index.html
@@ -85,14 +85,14 @@
         <!-- Sidebar -->
         <!-- Sidebar -->
         <div :class="[isSidebarOpen ? 'w-64' : 'w-14 cursor-pointer']" @click="!isSidebarOpen && toggleSidebar()"
-            class="bg-slate-50 border-r border-slate-200 flex flex-col flex-shrink-0 transition-all duration-300 overflow-hidden">
+            class="bg-[#F2F0EA] dark:bg-[#242933] border-r border-[#E6E4DD] dark:border-[#3B4252] flex flex-col flex-shrink-0 transition-all duration-300 overflow-hidden">
             <!-- Header -->
-            <div class="p-4 border-b border-slate-200 flex items-center bg-slate-50 flex-shrink-0 transition-all"
+            <div class="p-4 border-b border-[#E6E4DD] dark:border-[#3B4252] flex items-center bg-[#F2F0EA] dark:bg-[#242933] flex-shrink-0 transition-all"
                 :class="isSidebarOpen ? 'justify-between' : 'justify-center'">
                 <div class="flex items-center gap-2">
                     <img src="/static/logo.png" class="w-6 h-6 rounded-full shadow-sm object-cover" alt="SHYNOTE Logo">
                     <div class="relative" v-show="isSidebarOpen">
-                        <h1 class="text-xl font-bold text-slate-700 tracking-wider inline-block">
+                        <h1 class="text-xl font-bold text-[#44403C] dark:text-[#ECEFF4] tracking-wider inline-block">
                             <a :href="homeUrl">SHYNOTE</a>
                         </h1>
                         <span v-if="appVersion"
@@ -111,7 +111,7 @@
             </div>
 
             <!-- Toolbar (Sort & New) -->
-            <div class="px-3 py-2 border-b border-slate-200 flex items-center bg-slate-50 flex-shrink-0 gap-2 transition-all"
+            <div class="px-3 py-2 border-b border-[#E6E4DD] dark:border-[#3B4252] flex items-center bg-[#F2F0EA] dark:bg-[#242933] flex-shrink-0 gap-2 transition-all"
                 :class="isSidebarOpen ? 'justify-between flex-row' : 'flex-col justify-center py-4 gap-4'">
                 <!-- Sort Dropdown Trigger -->
                 <div class="relative" v-show="isSidebarOpen">
@@ -209,11 +209,13 @@
                     <div @dragover.prevent @drop="handleDrop(null)" class="min-h-[2rem] pb-2 transition-colors rounded"
                         :class="draggedNoteId ? 'bg-slate-50/50 border-2 border-dashed border-transparent hover:border-slate-300' : ''">
                         <!-- Uncategorized Notes (Root) -->
+                        <!-- Uncategorized Notes (Root) -->
                         <div v-for="note in sortedRootNotes" :key="note.id" @click="selectNote(note)"
                             :class="selectedNote && selectedNote.id === note.id 
-                            ? 'bg-blue-200 border-blue-400 shadow-md' 
-                            : 'bg-white shadow-md border-slate-200 md:hover:shadow-lg md:hover:bg-blue-50 active:bg-blue-50'" draggable="true" @dragstart="handleDragStart(note)"
-                            class="text-sm h-10 p-2 mb-1 cursor-pointer border rounded-md flex items-center group justify-between transition-all">
+                            ? 'bg-[#E0F2FE] dark:bg-[#3B4252] border-blue-400 dark:border-[#88C0D0] shadow-md ring-1 ring-blue-300 dark:ring-[#88C0D0]/50' 
+                            : 'bg-[#FFFEF8] dark:bg-[#2E3440] shadow-[0_2px_8px_rgba(0,0,0,0.08)] border-[#E6E4DD] dark:border-[#3B4252] md:hover:shadow-xl md:hover:bg-white dark:hover:bg-[#3B4252] active:bg-[#F2F0EA] dark:active:bg-[#242933]'"
+                            draggable="true" @dragstart="handleDragStart(note)"
+                            class="text-sm h-10 p-2 mb-2 cursor-pointer border rounded-md flex items-center group justify-between transition-all">
                             <div class="flex items-center min-w-0 flex-1">
                                 <img src="/static/icons/markdown.svg" class="w-5 h-5 mr-2 flex-shrink-0" alt="Markdown">
 
@@ -225,7 +227,7 @@
                                 <!-- Normal Title & Date -->
                                 <div v-else class="flex flex-col flex-1 min-w-0"
                                     @dblclick.stop="startRename(note, 'note')">
-                                    <div :class="selectedNote && selectedNote.id === note.id ? 'text-blue-900 font-bold' : 'text-slate-700'"
+                                    <div :class="selectedNote && selectedNote.id === note.id ? 'text-blue-900 dark:text-[#88C0D0] font-bold' : 'text-[#44403C] dark:text-[#D8DEE9] font-medium'"
                                         class="text-sm truncate select-none leading-tight">{{ note.title || 'Untitled'
                                         }}
                                     </div>
@@ -248,10 +250,10 @@
                     </div> <!-- End Root Drop Zone -->
 
                     <!-- Folders -->
-                    <div v-for="folder in sortedFolders" :key="folder.id" class="mb-2" @dragover.prevent
+                    <div v-for="folder in sortedFolders" :key="folder.id" class="mb-3" @dragover.prevent
                         @drop="handleDrop(folder.id)">
                         <div
-                            class="flex items-center text-sm font-semibold h-10 text-slate-600 p-2 mb-1 group bg-white shadow-md border border-slate-200 md:hover:shadow-lg md:hover:bg-blue-50 active:bg-blue-50 rounded transition-all cursor-pointer">
+                            class="flex items-center text-sm font-semibold h-10 text-[#57534E] dark:text-[#D8DEE9] p-2 mb-1 group bg-[#FFFEF8] dark:bg-[#2E3440] shadow-[0_2px_8px_rgba(0,0,0,0.08)] border-[#E6E4DD] dark:border-[#3B4252] md:hover:shadow-xl md:hover:bg-white dark:hover:bg-[#3B4252] active:bg-[#F2F0EA] dark:active:bg-[#242933] rounded transition-all cursor-pointer">
                             <img :src="getSortedFolderNotes(folder.id).length > 0 ? '/static/icons/folder-open.svg' : '/static/icons/folder.svg'"
                                 class="w-5 h-5 mr-2 opacity-90" alt="Folder">
                             <!-- Rename Input -->
@@ -283,10 +285,10 @@
                             <div v-for="note in getSortedFolderNotes(folder.id)" :key="note.id"
                                 @click="selectNote(note)"
                                 :class="selectedNote && selectedNote.id === note.id 
-                                    ? 'bg-blue-200 border-blue-400 shadow-md' 
-                                    : 'bg-white shadow-md border-slate-200 md:hover:shadow-lg md:hover:bg-blue-50 active:bg-blue-50'"
+                                    ? 'bg-[#E0F2FE] dark:bg-[#3B4252] border-blue-400 dark:border-[#88C0D0] shadow-md ring-1 ring-blue-300 dark:ring-[#88C0D0]/50' 
+                                    : 'bg-[#FFFEF8] dark:bg-[#2E3440] shadow-[0_2px_8px_rgba(0,0,0,0.08)] border-[#E6E4DD] dark:border-[#3B4252] md:hover:shadow-xl md:hover:bg-white dark:hover:bg-[#3B4252] active:bg-[#F2F0EA] dark:active:bg-[#242933]'"
                                 draggable="true" @dragstart="handleDragStart(note)"
-                                class="text-sm h-10 p-2 mb-1 cursor-pointer border rounded-md flex items-center group justify-between transition-all relative">
+                                class="text-sm h-10 p-2 mb-2 cursor-pointer border rounded-md flex items-center group justify-between transition-all relative">
                                 <!-- Tree Connector -->
                                 <div class="absolute -left-3 top-1/2 w-3 h-0.5 bg-slate-200 -translate-y-1/2"></div>
 
@@ -301,7 +303,7 @@
                                     <!-- Normal Title & Date -->
                                     <div v-else class="flex flex-col flex-1 min-w-0"
                                         @dblclick.stop="startRename(note, 'note')">
-                                        <div :class="selectedNote && selectedNote.id === note.id ? 'text-blue-900 font-bold' : 'text-slate-700'"
+                                        <div :class="selectedNote && selectedNote.id === note.id ? 'text-blue-900 dark:text-[#88C0D0] font-bold' : 'text-[#44403C] dark:text-[#D8DEE9] font-medium'"
                                             class="text-sm truncate select-none leading-tight">{{ note.title ||
                                             'Untitled' }}</div>
                                         <div class="text-[9px] text-slate-400 leading-none mt-0.5">{{
