--- a/static/index.html
+++ b/static/index.html
@@ -24,9 +24,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500&family=Inter:wght@400;500;600&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/wan2land/d2coding/d2coding.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/static/style.css?v=6">
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
@@ -62,6 +62,17 @@
                 <h3 class="text-lg font-bold text-slate-800 dark:text-white mb-2">{{ modalState.title }}</h3>
                 <p class="text-slate-600 dark:text-slate-300 text-sm mb-4">{{ modalState.message }}</p>
 
+                <!-- Share Note Content -->
+                <div v-if="modalState.type === 'share-note'">
+                    <div
+                        class="flex items-center gap-2 mb-4 bg-slate-100 dark:bg-slate-700 p-2 rounded border border-slate-200 dark:border-slate-600">
+                        <span class="material-symbols-rounded text-slate-500 dark:text-slate-400">link</span>
+                        <input id="share-link-input" type="text" readonly :value="modalState.inputValue"
+                            class="flex-1 bg-transparent text-sm text-slate-700 dark:text-slate-200 outline-none w-full"
+                            style="font-family: 'JetBrains Mono', monospace;" @click="$event.target.select()">
+                    </div>
+                </div>
+
                 <!-- Input for Create Folder -->
                 <input v-if="modalState.type === 'create-folder'" id="modal-input" v-model="modalState.inputValue"
                     @keyup.enter="confirmAction"
@@ -73,7 +84,18 @@
                         class="px-4 py-2 text-sm font-medium text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-200">
                         {{ modalState.cancelText }}
                     </button>
-                    <button @click="confirmAction"
+                    <!-- Special Buttons for Share Modal -->
+                    <template v-if="modalState.type === 'share-note'">
+                        <button @click="stopSharing"
+                            class="px-4 py-2 text-sm font-medium text-red-500 hover:text-red-700 border border-red-200 hover:bg-red-50 dark:border-red-900/50 dark:hover:bg-red-900/20 rounded-lg transition-colors">
+                            Stop Sharing
+                        </button>
+                        <button @click="copyShareLink"
+                            class="px-4 py-2 text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 rounded-lg transition-colors shadow-sm flex items-center gap-1">
+                            <span class="material-symbols-rounded text-[16px]">content_copy</span> Copy
+                        </button>
+                    </template>
+                    <button v-else @click="confirmAction"
                         :class="modalState.type && modalState.type.includes('delete') ? 'bg-red-500 hover:bg-red-600' : 'bg-blue-600 hover:bg-blue-700'"
                         class="px-4 py-2 text-sm font-medium text-white rounded-lg transition-colors shadow-sm">
                         {{ modalState.confirmText }}
@@ -392,10 +414,13 @@
                                     <span class="material-symbols-rounded text-[18px] block">preview</span>
                                 </button>
                             </div>
-                            <button @click="deleteNote(selectedNote.id)"
-                                class="text-red-400 hover:text-red-500 p-2 rounded hover:bg-red-50 dark:hover:bg-red-900/30"
-                                title="Delete Note">
-                                <span class="material-symbols-rounded text-[20px]">delete</span>
+                            <button @click="toggleShare" :class="selectedNote.is_shared 
+                                    ? 'text-blue-600 bg-blue-100 dark:bg-blue-500 dark:text-white ring-2 ring-blue-300 dark:ring-blue-700 shadow-md transform scale-105' 
+                                    : 'text-slate-400 dark:text-[#D8DEE9] hover:text-slate-600'"
+                                class="p-1 rounded transition-all duration-200"
+                                :title="selectedNote.is_shared ? 'Manage Sharing' : 'Share Note'">
+                                <span class="material-symbols-rounded text-[18px] block"
+                                    :style="selectedNote.is_shared ? 'font-variation-settings: \'FILL\' 1' : ''">share</span>
                             </button>
                         </div>
                     </div>
